--- a/slides/config.cfg
+++ b/slides/config.cfg
@@ -1,11 +1,10 @@
 [landslide]
-source = past.md
-         newstuff.md
-         statements.md
-         objects.md
-         functions.md
-         object_methods.md
-         arrays.md
+source = introduction/Readme.md
+         statements/Readme.md
+         types/Readme.md
+         functions/Readme.md
+         objects/Readme.md
+         built-in/Readme.md
 destination = presentation.html
 relative = True
 linenos = no
